--- a/index.html
+++ b/index.html
@@ -5,8 +5,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>penguinfashion-tailwindcss</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        .bebas-neue{
+        font-family: "Bebas Neue", sans-serif;
+    }
+
+    .roboto{
+        font-family: "Roboto", sans-serif;
+    }
+    </style>
 </head>
 <body>
-    
+    <header class="bg-[#FFFBF0]">
+        <nav></nav>
+        <!-- Banner section start here... -->
+        <section class="w-full px-3.5 my-5">
+            <div>
+                <h1 class="bebas-neue text-5xl font-bold tracking-normal"> <span class="text-[#FABE4C]">Be the Penguins</span><br> <span class="text-[#363958]">of Winter</span></h1>
+                <p class="roboto text-base text-[#3E3E3E] font-normal">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                <button class="bg-gradient-to-r from-[#A4BC46] to-[#85A019] text-[#ffff] py-3 px-5 rounded-xl mt-6">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="#ffff" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 inline mr-2">
+                     <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                  </svg>BUY NOW</button>
+            </div>
+            <div class="w-[300px] mx-auto mt-10">
+                <img class="h-full w-full" src="./images/model.png" alt="model-img">
+            </div>
+        </section>
+    </header>
 </body>
 </html>
