--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
     </header>
     <main>
         <!-- Woman jacket section start here... -->
-        <section class="sm:w-full">
-            <h1 class="text-4xl text-center text-[#363958] mb-7">WoMan Jacket</h1>
-            <div class="space-y-3">
-                <div class="w-[280px] mx-auto p-4 shadow">
-                    <div class="w-[240px] mx-auto bg-slate-100">
-                        <img class="w-full" src="./images/jacket-1.png" alt="jacket">
+        <section class="sm:w-full lg:w-4/5 lg:mx-auto my-14">
+            <h1 class="text-4xl text-center text-[#363958] mb-7 lg:text-left">Woman Jacket</h1>
+            <div class="space-y-3 lg:flex lg:items-center lg:justify-center">
+                <div class="w-[280px] mx-auto p-4 shadow rounded-xl">
+                    <div class="w-[240px] mx-auto bg-slate-100 rounded-xl">
+                        <img class="w-full rounded-xl" src="./images/jacket-1.png" alt="jacket">
                     </div>
                         <h3 class="text-2xl text-[#363958] roboto mt-3">Yellow Coat Jacket </h3>
                         <p class="text-xs text-[#3E3E3E] mt-4 ">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
@@ -66,9 +66,9 @@
                 </div>
                 <div class="w-[280px] shadow mx-auto p-4">
                     <div class="w-[240px] mx-auto bg-slate-100">
-                        <img class="w-full" src="./images/jacket-1.png" alt="jacket">
+                        <img class="w-full" src="./images/jacket-2.png" alt="jacket">
                     </div>
-                        <h3 class="text-2xl text-[#363958] roboto mt-3">Yellow Coat Jacket </h3>
+                        <h3 class="text-2xl text-[#363958] roboto mt-3">Ladies Jacket </h3>
                         <p class="text-xs text-[#3E3E3E] mt-4 ">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                         <div class="flex items-center justify-between mt-5">
                             <h2 class="text-2xl text-[#FABE4C] font-bold inline">$234</h2>
@@ -81,9 +81,9 @@
                 </div>
                 <div class="w-[280px]  mx-auto p-4 shadow">
                     <div class="w-[240px] mx-auto bg-slate-100">
-                        <img class="w-full" src="./images/jacket-1.png" alt="jacket">
+                        <img class="w-full" src="./images/jacket-3.png" alt="jacket">
                     </div>
-                        <h3 class="text-2xl text-[#363958] roboto mt-3">Yellow Coat Jacket </h3>
+                        <h3 class="text-2xl text-[#363958] roboto mt-3">Woman Leather Jacket  </h3>
                         <p class="text-xs text-[#3E3E3E] mt-4 ">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                         <div class="flex items-center justify-between mt-5">
                             <h2 class="text-2xl text-[#FABE4C] font-bold inline">$234</h2>
@@ -96,6 +96,7 @@
                 </div>
             </div>
         </section>
+        <!-- Man jacket section start here... -->
     </main>
 </body>
 </html>
