--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <main>
         <!-- Woman jacket section start here... -->
         <section class="sm:w-full lg:w-4/5 lg:mx-auto my-14">
-            <h1 class="text-4xl text-center text-[#363958] mb-7 lg:text-left">Woman Jacket</h1>
+            <h1 class="text-4xl text-center uppercase text-[#363958] mb-7 lg:text-left">Woman Jacket</h1>
             <div class="space-y-3 lg:flex lg:items-center lg:justify-center">
                 <div class="w-[280px] mx-auto p-4 shadow rounded-xl">
                     <div class="w-[240px] mx-auto bg-slate-100 rounded-xl">
@@ -97,6 +97,84 @@
             </div>
         </section>
         <!-- Man jacket section start here... -->
+        <section class="sm:w-full lg:w-4/5 lg:mx-auto my-14">
+            <h1 class="text-4xl text-center uppercase text-[#363958] mb-7 lg:text-left">Man Jacket</h1>
+            <div class="space-y-3 lg:flex lg:items-center lg:justify-center">
+                <div class="w-[280px] mx-auto p-4 shadow rounded-xl">
+                    <div class="w-[240px] mx-auto bg-slate-100 rounded-xl">
+                        <img class="w-full rounded-xl" src="./images/jacket-4.png" alt="jacket">
+                    </div>
+                        <h3 class="text-xl text-[#363958] roboto mt-3">Snowboard Jacket Mens </h3>
+                        <p class="text-xs text-[#3E3E3E] mt-4 ">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                        <div class="flex items-center justify-between mt-5">
+                            <h2 class="text-2xl text-[#FABE4C] font-bold inline">$234</h2>
+                            <button class="bg-gradient-to-r from-[#A4BC46] to-[#85A019] text-[#ffff] py-3 px-5 rounded-xl">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="#ffff" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 inline mr-2">
+                             <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                          </svg>BUY NOW
+                        </button>
+                    </div>
+                </div>
+                <div class="w-[280px] shadow mx-auto p-4">
+                    <div class="w-[240px] mx-auto bg-slate-100">
+                        <img class="w-full" src="./images/jacket-5.png" alt="jacket">
+                    </div>
+                        <h3 class="text-xl text-[#363958] roboto mt-3">Man Leather Jackets</h3>
+                        <p class="text-xs text-[#3E3E3E] mt-4 ">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                        <div class="flex items-center justify-between mt-5">
+                            <h2 class="text-2xl text-[#FABE4C] font-bold inline">$234</h2>
+                            <button class="bg-gradient-to-r from-[#A4BC46] to-[#85A019] text-[#ffff] py-3 px-5 rounded-xl">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="#ffff" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 inline mr-2">
+                             <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                          </svg>BUY NOW
+                        </button>
+                    </div>
+                </div>
+                <div class="w-[280px]  mx-auto p-4 shadow">
+                    <div class="w-[240px] mx-auto bg-slate-100">
+                        <img class="w-full" src="./images/jacket-6.png" alt="jacket">
+                    </div>
+                        <h3 class="text-xl text-[#363958] roboto mt-3">Man Casual Jackets</h3>
+                        <p class="text-xs text-[#3E3E3E] mt-4 ">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                        <div class="flex items-center justify-between mt-5">
+                            <h2 class="text-2xl text-[#FABE4C] font-bold inline">$234</h2>
+                            <button class="bg-gradient-to-r from-[#A4BC46] to-[#85A019] text-[#ffff] py-3 px-5 rounded-xl">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="#ffff" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 inline mr-2">
+                             <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                          </svg>BUY NOW
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
+    <footer class="px-4">
+        <div class="">
+            <img src="./images/shopping.png" alt="">
+        </div>
+        <div>
+            <div class="w-[270px]  mx-auto my-5 shadow rounded-xl">
+                <div class="w-[80px] h-[80px] border mx-auto my-5">
+                    <img class="w-full h-full" src="./icons/house.png" alt="">
+                </div>
+                <h3 class="text-xl text-center text-[#363958] roboto mb-3">Find the Perfect Fit</h3>
+                <p class="roboto text-[#3E3E3E] text-base text-center">Everybody is different, which is why we offer styles for every body.</p>
+            </div>
+            <div class="w-[270px]  mx-auto my-5 shadow rounded-xl">
+                <div class="w-[80px] h-[80px] border mx-auto my-5">
+                    <img class="w-full h-full" src="./icons/box.png" alt="">
+                </div>
+                <h3 class="text-xl text-center text-[#363958] roboto mb-3">Free Exchanges</h3>
+                <p class="roboto text-[#3E3E3E] text-base text-center">One of the many reasons you can shop with peace of mind.</p>
+            </div>
+            <div class="w-[270px]  mx-auto my-5 shadow rounded-xl">
+                <div class="w-[80px] h-[80px] border mx-auto my-5">
+                    <img class="w-full h-full" src="./icons/question.png" alt="">
+                </div>
+                <h3 class="text-xl text-center text-[#363958] roboto mb-3">Contact Our Seller</h3>
+                <p class="roboto text-[#3E3E3E] text-base text-center">They are here to help you. That's quite literally what we pay them for.</p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
