footer section is compleate with small & large devices

--- a/index.html
+++ b/index.html
@@ -148,31 +148,37 @@
             </div>
         </section>
     </main>
-    <footer class="px-4">
-        <div class="">
+    <footer class="px-4 lg:w-4/5 border lg:mx-auto lg:flex lg:flex-row-reverse lg:justify-between lg:items-center">
+        <div class="lg:w-1/2">
             <img src="./images/shopping.png" alt="">
         </div>
-        <div>
-            <div class="w-[270px]  mx-auto my-5 shadow rounded-xl">
-                <div class="w-[80px] h-[80px] border mx-auto my-5">
+        <div class="lg:flex lg:flex-col">
+            <div class="w-[270px]  mx-auto my-5 shadow rounded-xl lg:flex lg:w-4/5 lg:justify-between lg:items-center">
+                <div class="w-[80px] h-[80px] border mx-auto my-5 lg:mr-4">
                     <img class="w-full h-full" src="./icons/house.png" alt="">
                 </div>
-                <h3 class="text-xl text-center text-[#363958] roboto mb-3">Find the Perfect Fit</h3>
-                <p class="roboto text-[#3E3E3E] text-base text-center">Everybody is different, which is why we offer styles for every body.</p>
+                <div>
+                    <h3 class="text-xl text-center text-[#363958] roboto mb-3 lg:text-left">Find the Perfect Fit</h3>
+                    <p class="roboto text-[#3E3E3E] text-base text-center lg:text-left">Everybody is different, which is why we offer styles for every body.</p>
+                </div>
             </div>
-            <div class="w-[270px]  mx-auto my-5 shadow rounded-xl">
-                <div class="w-[80px] h-[80px] border mx-auto my-5">
+            <div class="w-[270px]  mx-auto my-5 shadow rounded-xl lg:flex lg:w-4/5 lg:justify-between lg:items-center">
+                <div class="w-[80px] h-[80px] border mx-auto my-5 lg:mr-4">
                     <img class="w-full h-full" src="./icons/box.png" alt="">
                 </div>
-                <h3 class="text-xl text-center text-[#363958] roboto mb-3">Free Exchanges</h3>
-                <p class="roboto text-[#3E3E3E] text-base text-center">One of the many reasons you can shop with peace of mind.</p>
+                <div>
+                    <h3 class="text-xl text-center text-[#363958] roboto mb-3 lg:text-left">Free Exchanges</h3>
+                    <p class="roboto text-[#3E3E3E] text-base text-center lg:text-left">One of the many reasons you can shop with peace of mind.</p>
+                </div>
             </div>
-            <div class="w-[270px]  mx-auto my-5 shadow rounded-xl">
-                <div class="w-[80px] h-[80px] border mx-auto my-5">
+            <div class="w-[270px]  mx-auto my-5 shadow rounded-xl lg:flex lg:w-4/5 lg:justify-between lg:items-center">
+                <div class="w-[80px] h-[80px] border mx-auto my-5 lg:mr-4">
                     <img class="w-full h-full" src="./icons/question.png" alt="">
                 </div>
-                <h3 class="text-xl text-center text-[#363958] roboto mb-3">Contact Our Seller</h3>
-                <p class="roboto text-[#3E3E3E] text-base text-center">They are here to help you. That's quite literally what we pay them for.</p>
+                <div>
+                    <h3 class="text-xl text-center text-[#363958] roboto mb-3 lg:text-left">Contact Our Seller</h3>
+                    <p class="roboto text-[#3E3E3E] text-base text-center lg:text-left">They are here to help you. That's quite literally what we pay them for.</p>
+                </div>
             </div>
         </div>
     </footer>
